--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,47 @@
             </plugin>
         </plugins>
     </build>
+	
+	
+	
+	
+	
+	
+	
+<!-- /repository/maven-releases/ -->
+    <scm>
+        <url>https://github.com/CGS-IT-Solutions/kurs_0410_002</url>
+        <connection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_002</connection>
+        <developerConnection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_002</developerConnection>
+      <tag>test</tag>
+  </scm>
+
+	<distributionManagement>
+	   <snapshotRepository>
+		  <id>kurs_04_10</id>
+		  <url>http://ec2-3-87-211-121.compute-1.amazonaws.com:8081/repository/maven-snapshots/</url>
+	   </snapshotRepository>
+	   <repository>
+		  <id>nexus-releases</id>
+		  <url>http://ec2-3-87-211-121.compute-1.amazonaws.com:8081/repository/maven-releases/</url>
+	   </repository>	   
+	</distributionManagement>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 
     <dependencies>
 
