--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>at.cgsit.two</groupId>
     <artifactId>simpletest</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Simple Test</name>
@@ -44,7 +42,7 @@
         <url>https://github.com/CGS-IT-Solutions/kurs_0410_002</url>
         <connection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_002</connection>
         <developerConnection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_002</developerConnection>
-      <tag>test</tag>
+      <tag>simpletest-1.3</tag>
   </scm>
 
 	<distributionManagement>
