--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <url>https://github.com/CGS-IT-Solutions/kurs_0410_002</url>
         <connection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_002</connection>
         <developerConnection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_002</developerConnection>
-      <tag>simpletest-1.3</tag>
+      <tag>release_1_3_0_fancytag</tag>
   </scm>
 
 	<distributionManagement>
