--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>at.cgsit.two</groupId>
     <artifactId>simpletest</artifactId>
-    <version>1.3</version>
+    <version>1.4-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Simple Test</name>
@@ -42,7 +42,7 @@
         <url>https://github.com/CGS-IT-Solutions/kurs_0410_002</url>
         <connection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_002</connection>
         <developerConnection>scm:git:https://github.com/CGS-IT-Solutions/kurs_0410_002</developerConnection>
-      <tag>release_1_3_0_tagoftags</tag>
+      <tag>release_1_3_0_fancytag</tag>
   </scm>
 
 	<distributionManagement>
